syntax = "proto3";

package MessagePackage;

import "./ChatObjects.proto";

message CreateRequest {
    string roomId = 1;
    string content = 2;
}

message ReadRequest {
    string roomId = 1;
}

message UpdateRequest {
    string id = 1;

    string content = 2;
}

message DeleteRequest {
    string id = 1;
}

message MessageList {
    repeated MessageObject messages = 1;
}

service Message {
    rpc Create (CreateRequest) returns (MessageObject);
    rpc Read (ReadRequest) returns (MessageList);
    rpc Update (UpdateRequest) returns (MessageObject);
    rpc Delete (DeleteRequest) returns (MessageObject);
}